(wip) working pdf, but we should consider a refactor to have copyToTempFile just take a path to get around the failures in PdfFileTest
- Removing actions when setting pdf value deals with weird PDFBox issues where flattening removes fields visibility

[#184553834]

Co-authored-by: Alex Gonzalez <agonzalez@codeforamerica.org>
Co-authored-by: Bethany Seeger <bseeger@codeforamerica.org>